@@ -67,7 +67,7 @@ def add_xdcc_argparse_arguments(parser: ArgumentParser):
                              "sending the xdcc send request")
     parser.add_argument("--username",
                         help="Specifies a user name for the downloader bot")
-    parser.add_argument("--channel-join-delay",
+    parser.add_argument("--channel-join-delay", type=int,
                         help="Specifies a delay in seconds for how long the"
                              "downloader should wait before connecting to"
                              "channels")
